--- a/FileSystemVisitor/BusinessLogic/BusinessLogic.csproj
+++ b/FileSystemVisitor/BusinessLogic/BusinessLogic.csproj
@@ -43,11 +43,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="FileSystemVisitor.cs" />
-    <Compile Include="Filter.cs" />
+    <Compile Include="Flag.cs" />
     <Compile Include="Interfaces\IFileProvider.cs" />
-    <Compile Include="Interfaces\IFileSystemService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\FileSystemService.cs" />
     <Compile Include="Services\PhysicalFileProvider.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
