--- a/FileSystemVisitor/BusinessLogic.Test/packages.config
+++ b/FileSystemVisitor/BusinessLogic.Test/packages.config
@@ -2,7 +2,12 @@
 <packages>
   <package id="Autofac" version="6.3.0" targetFramework="net472" />
   <package id="Autofac.Extras.Moq" version="6.1.0" targetFramework="net472" />
+  <package id="AutoFixture" version="4.17.0" targetFramework="net472" />
+  <package id="AutoFixture.AutoMoq" version="4.17.0" targetFramework="net472" />
+  <package id="AutoFixture.Xunit2" version="4.17.0" targetFramework="net472" />
   <package id="Castle.Core" version="4.4.1" targetFramework="net472" />
+  <package id="Fare" version="2.1.1" targetFramework="net472" />
+  <package id="FluentAssertions" version="6.5.1" targetFramework="net472" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration" version="6.0.0" targetFramework="net472" />
   <package id="Microsoft.Extensions.Configuration.Abstractions" version="6.0.0" targetFramework="net472" />
@@ -37,6 +42,7 @@
   <package id="System.Diagnostics.DiagnosticSource" version="6.0.0" targetFramework="net472" />
   <package id="System.IO" version="4.3.0" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
   <package id="System.Runtime" version="4.3.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
@@ -44,6 +50,7 @@
   <package id="System.Security.Cryptography.Algorithms" version="4.3.1" targetFramework="net472" />
   <package id="System.Security.Cryptography.Encoding" version="4.3.0" targetFramework="net472" />
   <package id="System.Security.Cryptography.Primitives" version="4.3.0" targetFramework="net472" />
+  <package id="System.Security.Cryptography.X509Certificates" version="4.3.0" targetFramework="net472" />
   <package id="System.Text.Encodings.Web" version="6.0.0" targetFramework="net472" />
   <package id="System.Text.Json" version="6.0.0" targetFramework="net472" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net472" />
