--- a/Logging/Logging/BrainstormSessions/BrainstormSessions.csproj
+++ b/Logging/Logging/BrainstormSessions/BrainstormSessions.csproj
@@ -8,6 +8,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.0.1" />
     <PackageReference Include="Serilog" Version="2.11.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.0.1" />
+    <PackageReference Include="Serilog.Sinks.Email" Version="2.4.0" />
+    <PackageReference Include="Serilog.Sinks.EmailPickup" Version="1.0.0" />
   </ItemGroup>
 
 </Project>
