--- a/Serialization/DeepCloning/DeepCloning.csproj
+++ b/Serialization/DeepCloning/DeepCloning.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -6,9 +6,5 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="protobuf-net" Version="3.1.4" />
-  </ItemGroup>
 
 </Project>
