--- a/OOP/ConsoleApp/ConsoleApp.csproj
+++ b/OOP/ConsoleApp/ConsoleApp.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\BusinessLogic\BusinessLogic.csproj" />
+    <ProjectReference Include="..\FileSystem\FileSystem.csproj" />
   </ItemGroup>
 
 </Project>
