ORM : new projects: library, database and tests

--- a/ORM/ORM.Tests/ORM.Tests.csproj
+++ b/ORM/ORM.Tests/ORM.Tests.csproj
@@ -18,8 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\ADOLibrary\ADOLibrary.csproj" />
-    <ProjectReference Include="..\ADOLibrary\ADOLibrary.csproj" />
+    <ProjectReference Include="..\ORMLibrary\ORMLibrary.csproj" />
   </ItemGroup>
 
 </Project>
